log
Thu May  5 11:12:02 HSP 2022: 
 heap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
3746527
Thu May  5 11:14:50 HSP 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from heap.c:6:0,
                 from test.c:4:
heap.c: In function 'heap_top':
heap.c:22:4: error: used struct type value where scalar is required
    assert(pq->heapArray[0]);
    ^
In file included from test.c:4:0:
heap.c:23:24: error: incompatible types when returning type 'heapElem {aka struct nodo}' but 'void *' was expected
    return pq->heapArray[0];
           ~~~~~~~~~~~~~^~~
heap.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
d1c9d25
Thu May  5 11:15:16 HSP 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'heap_top':
heap.c:23:27: error: invalid type argument of '->' (have 'heapElem {aka struct nodo}')
    return pq->heapArray[0]->data;
                           ^~
heap.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
e763e2f
Thu May  5 11:15:28 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
669694d
Thu May  5 11:16:14 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
9d29834
Thu May  5 11:16:27 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
d3d86ad
Thu May  5 11:17:14 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from heap.c:6:0,
                 from test.c:4:
heap.c: In function 'heap_top':
heap.c:22:4: error: used struct type value where scalar is required
    assert(pq->heapArray[0]);
    ^
Compilation failed
7b44086
